# libiomultiplex

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  autogen.sh  configure.ac
doc/: CMakeLists.txt  Makefile.am  doxygen.cfg.in
examples/: .gitignore  CMakeLists.txt  CaseAdapter.cpp  CaseAdapter.hpp  Makefile.am  ObfuscateAdapter.cpp  ObfuscateAdapter.hpp  ReverseAdapter.cpp  ReverseAdapter.hpp  RobberAdapter.cpp  RobberAdapter.hpp  ShuffleAdapter.cpp  ShuffleAdapter.hpp  adapter-test.cpp  async-file-read.cpp  beacon-client.cpp  beacon-server.cpp  case_adapter.cpp  case_adapter.hpp  echo-client.cpp  echo-dtls-client.cpp  echo-dtls-server.cpp  echo-server.cpp  echo-tcp-client.cpp  echo-tcp-server.cpp  echo-tls-client.cpp  echo-tls-server.cpp  echo-udp-client.cpp  echo-udp-server.cpp  logging.cpp  logging.hpp  obfuscate_adapter.cpp  obfuscate_adapter.hpp  reverse_adapter.cpp  reverse_adapter.hpp  robber_adapter.cpp  robber_adapter.hpp  shuffle_adapter.cpp  shuffle_adapter.hpp  sync-file-read.cpp  (+8 more)
examples/iom-tftp/: iom-tftp.cpp  iom-tftpc-options.cpp  iom-tftpd-options.cpp  iom-tftpd-options.hpp  iom-tftpd.cpp  tftp-session.cpp  tftp-session.hpp  tftp.cpp  tftp.hpp
src/: CMakeLists.txt  Makefile.am  iomultiplex.hpp  iomultiplex.hpp.in  iomultiplex.pc.in
src/iomultiplex/: Adapter.cpp  Adapter.hpp  BufferPool.cpp  BufferPool.hpp  ChunkAdapter.cpp  ChunkAdapter.hpp  Connection.cpp  Connection.hpp  FdConnection.cpp  FdConnection.hpp  FileConnection.cpp  FileConnection.hpp  FileNotifier.cpp  FileNotifier.hpp  IOHandler.cpp  IOHandler.hpp  IOHandler_Epoll.cpp  IOHandler_Epoll.hpp  IOHandler_Poll.cpp  IOHandler_Poll.hpp  IpAddr.cpp  IpAddr.hpp  Log.cpp  Log.hpp  PollDescriptors.cpp  PollDescriptors.hpp  Resolver.cpp  Resolver.hpp  SerialConnection.cpp  SerialConnection.hpp  SockAddr.cpp  SockAddr.hpp  SocketConnection.cpp  SocketConnection.hpp  TimerConnection.cpp  TimerConnection.hpp  TimerSet.cpp  TimerSet.hpp  TlsAdapter.cpp  TlsAdapter.hpp  (+53 more)
